chore(TPSVC-20652): migrated the build to DIND (#28)